--- a/templates/shop/product/list.html
+++ b/templates/shop/product/list.html
@@ -32,17 +32,19 @@
         <div class="col-md-9">
             <div class="row">
                 {% for product in products %}
-                <div class="col-md-4 mb-4">
-                    <a href="{{ product.get_absolute_url }}" style="text-decoration: none;">
-                    <div class="card">
-                        <img src="{% if product.cover %}{{ product.cover.url }}{% else %}{% static "img/product.jpeg" %}{% endif %}" class="card-img-top" alt="{{ product.title }}">
-                        <div class="card-body">
-                            <h5 class="card-title">{{ product.title }}</h5>
-                            <p class="card-text">${{ product.price }}</p>
-                        </div>
-                    </div>
-                    </a>
-                </div>
+                    <div class="col-md-4 mb-4">
+                        <a href="{{ product.get_absolute_url }}" style="text-decoration: none;">
+                            <div class="card">
+                                <div class="ratio ratio-4x3">
+                                    <img src="{% if product.cover %}{{ product.cover.url }}{% else %}{% static "img/product.jpeg" %}{% endif %}" class="card-img-top" alt="{{ product.title }}">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">{{ product.title }}</h5>
+                                    <p class="card-text">${{ product.price }}</p>
+                                </div>
+                            </div>
+                        </a>
+                    </div>                
                 {% endfor %}
             </div>
         </div>
