udpate template + update CartRemove

--- a/templates/cart/detail.html
+++ b/templates/cart/detail.html
@@ -29,7 +29,7 @@
                   <td class="d-flex align-items-center">
                     <div class="mr-3">
                       <a href="{{ product.get_absolute_url }}">
-                        <img src="{% if product.cover %}{{ product.cover.url }}{% else %}{% static "img/product.jpeg" %}{% endif %}" style='width: 100px;border-radius: 10%;'>
+                        <img src="{% if product.cover %}{{ product.cover.url }}{% else %}{% static "img/product.jpeg" %}{% endif %}" style='width: 100px;border-radius: 10%;margin-right: 20px;'>
                       </a>
                     </div>
                     <div>
