--- a/static/style/main.css
+++ b/static/style/main.css
@@ -2,3 +2,15 @@
     margin: 50px auto;
     text-align: center;
 }
+
+.footer {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 10px;
+    z-index: 9999;
+}
+
